# ProjectL

./: README.md  docker-compose.yml  init-replica.sh  package-lock.json
ai-service/: main.py
backend/: .env.redis.example  Dockerfile  index.js  migrate-mongo-config.js  package-lock.json  package.json
backend/migrations/: 20250729-create-example-collection.js  20250729-init-lung-app.js  20250804_create_user_profiles.js
backend/src/: admin.routes.js  auth.admin.middleware.js  auth.routes.js  db.js  db.rw.js  oauth.routes.js
db-healthcheck/: Dockerfile  index.js  package.json
frontend/: Dockerfile  package-lock.json  vite.config.js
frontend/src/: App.jsx  RegisterWithRecaptchaV3.jsx
image-processor/: CMakeLists.txt  Dockerfile  main.cpp
